--- a/DataPanel/DataPanel.csproj
+++ b/DataPanel/DataPanel.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="ParallelExtensionsExtras" Version="1.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DataPanels" />
+    </ItemGroup>
+
 </Project>
