--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -4,10 +4,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Raylib-cs" Version="4.0.0.1" />
+      <PackageReference Include="Raylib-cs" Version="3.7.0.1" />
     </ItemGroup>
 
 </Project>
