--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Raylib-cs" Version="3.7.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DataPanel\DataPanel.csproj" />
+    </ItemGroup>
+
 </Project>
