--- a/DataPanel/DataPanel.csproj
+++ b/DataPanel/DataPanel.csproj
@@ -15,4 +15,10 @@
       <Folder Include="DataPanels" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="resources\dev\DataPanel Generator.exe">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
